[gd_scene load_steps=5 format=3 uid="uid://emfnj7pv3hch"]

[ext_resource type="Script" path="res://scripts/placeable.gd" id="1_6wlp5"]
[ext_resource type="Texture2D" uid="uid://dfjatp4opxl6" path="res://assets/objects/path_b.png" id="2_klcvu"]
[ext_resource type="Script" path="res://scripts/placeable_footprint.gd" id="3_snth2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sos1n"]
radius = 5.0

[node name="PathB" type="StaticBody2D"]
script = ExtResource("1_6wlp5")

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(20, 28)
shape = SubResource("CircleShape2D_sos1n")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_klcvu")
centered = false

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(15, 28)
script = ExtResource("3_snth2")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(5, 6)
polygon = PackedVector2Array(-16, -27, 6, -27, 6, -4, -16, -4)

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="placement_eligibility_changed" from="Area2D" to="." method="_on_area_2d_placement_eligibility_changed"]
